--- a/estilos.css
+++ b/estilos.css
@@ -360,7 +360,8 @@ h3 {
 
 footer {
   height: 200px;
-  color: #126491;
+  color: #a7c6d7;
+  background-color: #126491;
   align-items: center;
   padding-top: 50px;
 }
