--- a/estilos.css
+++ b/estilos.css
@@ -5,25 +5,23 @@
 }
 body {
   width: 100vw;
-  border: 1px solid red;
+  
 }
 /*ESTO ES LA BARRA DE NAVEGACION*/
 .navbar {
-  width: 100%;
+  
   margin: 0;
   padding: 10px;
   background-color: #126491;
-
   display: flex;
   justify-content: flex-start;
 }
 
 .navbar:hover {
-  width: 100%;
+  
   margin: 0;
   padding: 10px;
   background-color: #3689ad;
-
   display: flex;
   justify-content: flex-start;
 }
@@ -49,18 +47,63 @@ body {
 
 /*ESTO ES LA IMAGEN PRINCIPAL*/
 
-.encabezado-img {
-  background-image: url(img/PORTADA.png);
-  width: 100%;
-  height: 600px;
-  background-size: cover;
+.slider-container {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: #d0d3d4;
-  font-size: 25px;
+  width: 100%;
+  height: 100vh;  
 }
+
+.slider-container img {
+  flex: 0 0 100%;
+  width: 100%;
+  height: auto;
+  object-fit: cover; 
+  scroll-snap-align: center;
+}
+
+/*ICONOS*/
+.iconos{
+  display: flex;  
+  justify-content: space-around;      
+  margin-left: 100px;
+  margin-bottom: 30px;   
+  cursor: pointer;  
+}
+
+.iconos p{    
+  display: flex;  
+  justify-content: space-around;  
+  color: #3689ad;
+  font-family: "Open Sans", sans-serif;  
+  width: 70%;
+  text-align: justify;  
+}
+
+.iconos h3{  
+  display: flex;  
+  justify-content: space-around; 
+  margin-bottom: 10px;
+  margin-left: -25%;
+}
+
+.ic{    
+  display: flex;  
+  justify-content: space-around;
+  margin-left: 25%;
+  width: 120px;
+  height: 200px;
+  grid-template-columns: repeat(3, 1fr);
+  transition: all 500ms ease-out; 
+}
+
+.ic:hover{ 
+  display: flex;  
+  justify-content: space-around;   
+  width: 150px;
+  height: 230px;
+}
+
+
 
 /*ESTO ES LA IMAGEN DE ATENCION SANITARIA*/
 
@@ -106,8 +149,11 @@ body {
 }
 
 .txt {
-  width: 100%;
+  text-align: justify;
+  width: 90%;
   color: #3689ad;
+  margin-left: 50px;
+  
   margin-top: 30px;
   font-size: 17px;
   margin-bottom: 30px;
@@ -121,12 +167,17 @@ body {
 }
 
 /*IMAGEN Y TEXTO DE CONSULTA EN LINEA*/
+ .consulta-online{
+  display: flex;
+  text-align: left;
+  background-image: url(/img/turno.png);
+  background-size: cover; 
+  height: 600px;
+ }
 
-.online {
-  width: 100%;
-  height: 700px;
-}
+
 .h4-turno {
+  margin-top: 60px;
   margin-bottom: 100px;
   margin-left: 25px;
   width: 100%;
@@ -134,39 +185,33 @@ body {
   font-size: 50px;
 }
 .txtTurno {
-  margin-left: 40px;
-  width: 100%;
+  text-align: justify;
+  margin-left: 40px;  
   color: white;
   margin-top: 30px;
-  font-size: 25px;
-  text-align: left;
+  font-size: 25px;  
   margin-bottom: 100px;
+  width: 50%;
 }
 .txtTurno:hover {
-  margin-left: 40px;
-  width: 100%;
+  text-align: justify;
+  margin-left: 40px;  
   color: #126491;
   margin-top: 30px;
   font-size: 25px;
   text-align: left;
   margin-bottom: 100px;
+  width: 50%;
 }
 .p-turno {
-  width: 100%;
+  
   color: #126491;
   font-size: 30px;
   margin-top: 30px;
   margin-left: 25px;
 }
 
-.imagenTurno {
-  width: 50%;
-  position: absolute;
-  top: 160%;
-  margin-left: 30px;
-  background-size: cover;
-  background-position: right;
-}
+
 
 /*TARJETA DE DOCTORES*/
 
@@ -187,6 +232,10 @@ body {
   border-radius: 15px;
   font-family: sans-serif;
 }
+.card-text{
+  color: #126491;
+  margin-bottom: 20px;
+}
 
 .card-img-top {
   font-size: 24px;
@@ -202,11 +251,10 @@ img {
   box-align: center;
 }
 
-.boton {
+.reserva {
   text-decoration: none;
-  padding: 3px 2px;
-  margin-top: 20px;
-  width: 100px;
+  padding: 5px 10px;
+   width: 100px;
   height: 30px;
   background-color: #a7c6d7;
   color: #126491;
@@ -214,7 +262,7 @@ img {
   position: relative;
 }
 
-.boton:hover {
+.reserva:hover {
   background-color: #126491;
   color: #a7c6d7;
   box-shadow: 2px 2px 8px 4px #a7c6d7;
@@ -229,9 +277,10 @@ img {
   justify-content: center;
   background: #126491;
   padding: 40px;
-  margin-top: 100px;
+  margin-top: 10px;
+  margin-bottom: 20px;
   border-radius: 4px;
-  border: 1px solid red;
+  
   font-family: "Open Sans", sans-serif;
   color: white;
   box-shadow: 7px 13px 37px #a7c6d7;
@@ -241,6 +290,11 @@ img {
   font-size: 22px;
   margin-bottom: 20px;
   color: white;
+}
+
+.registro p {
+  margin-top: 20px;
+  color: #d0d3d4;
 }
 
 .control {
@@ -321,52 +375,78 @@ h3 {
 
 /*PERSONAL DE CLINICA ACTUAL Y PREPAGA*/
 
-.noticias {
-  width: 100%;
-  height: 450px;
+.noticias{
+  
+  display: flex;
+  justify-content: right;
+  background-image: url(img/clinico.png);
+  background-size: cover;
+  height: 500px;
   margin-top: 50px;
 }
-.noticias:hover {
-  width: 100%;
-  height: 450px;
-  margin-top: 50px;
-  box-shadow: 2px 2px 8px 4px #a7c6d7;
+.noticias p{
+  margin-right: 30px;
+  margin-top: 60px;
 }
-.noti {
-  height: 604px;
-}
-
 .personal-clinica {
   color: #126491;
-  text-align: center;
+  text-align: right;
   font-size: 30px;
 }
-
-.personal-pre1 {
-  color: #126491;
-  text-align: center;
-  font-size: 30px;
-  align-items: center;
-}
-
-.personal-pre {
+.noticias2{  
   display: flex;
-  justify-content: space-around;
-  text-align: center;
-  align-items: center;
+  justify-content: right;
+  background-image: url(img/prepaga.png);
+  background-size: cover;
+  height: 500px;  
+  margin-top: 60px;
+  flex-direction: column;
+  text-align: end;
+  color:#a7c6d7;
+}
+
+.noticias2 h3{
+  color: #3689ad;
+  font-size: 30px;
+  text-align: end;
+  margin-right: 30px;
+  margin-top: 50px;
+}
+
+.noticias2 p{
+  font-size: 30px;
+  margin-right: 30px;
+  margin-top: 30px;
 }
 
 /*PIE DE PAGINA*/
 
 footer {
-  height: 200px;
-  color: #a7c6d7;
-  background-color: #126491;
-  align-items: center;
-  padding-top: 50px;
+  display: flex;
+  justify-content: space-around;
+  justify-items: center;
+  background-image: url(img/pie.png);
+  background-size: cover;  
+  height: 300px;
+  color: #2e6583;
+   
 }
 
-footer p {
-  padding-top: 30px;
-  text-align: center;
+footer h3{
+  margin-bottom: 10px;
 }
+
+footer p{
+  margin-bottom: 5px;
+}
+
+footer img{
+  display: flex;
+  justify-content: space-around;
+  margin-left: 40%;
+  margin-top: 30px;
+  width: 70px;
+  height: 70px;
+}
+
+
