--- a/estilos.css
+++ b/estilos.css
@@ -187,7 +187,7 @@ body {
 .txtTurno {
   text-align: justify;
   margin-left: 40px;  
-  color: white;
+  color: #126491;
   margin-top: 30px;
   font-size: 25px;  
   margin-bottom: 100px;
@@ -196,10 +196,9 @@ body {
 .txtTurno:hover {
   text-align: justify;
   margin-left: 40px;  
-  color: #126491;
+  color: #5b859b;
   margin-top: 30px;
-  font-size: 25px;
-  text-align: left;
+  font-size: 25px;  
   margin-bottom: 100px;
   width: 50%;
 }
